objects/Billboard__c/Billboard__c.object-meta.xml
<CustomObject>
    <description>This is Billboard object.</description>
    <label>Billboard</label>
    <nameField>
        <label>BB #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billboards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>