objects/Billboard__c/fields/BB_Vendor__c.field-meta.xml
<CustomField>
    <fullName>BB_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BB Vendor</label>
    <referenceTo>Vendor__c</referenceTo>
    <relationshipLabel>Billboards</relationshipLabel>
    <relationshipName>Billboards</relationshipName>
    <type>Lookup</type>
</CustomField>