objects/Billboard__c/fields/Billboard_Status__c.field-meta.xml
<CustomField>
    <fullName>Billboard_Status__c</fullName>
    <label>Billboard Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Active-Batch</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>