objects/Billboard__c/fields/Map__c.field-meta.xml
<CustomField>
    <fullName>Map__c</fullName>
    <formula>IMAGE(&quot;https://maps.googleapis.com/maps/api/staticmap?center=&quot; + Latitude__c + &quot;,&quot; + Longitude__c + &quot;&amp;zoom=13&amp;size=600x300&amp;markers=color:red|&quot; + Latitude__c + &quot;,&quot; + Longitude__c + &quot;&amp;sensor=false&quot; 
, &quot;No map available&quot;, 300, 500)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Map</label>
    <type>Text</type>
</CustomField>