objects/Billboard__c/fields/Photo_1__c.field-meta.xml
<CustomField>
    <fullName>Photo_1__c</fullName>
    <label>Photo Old 1</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>