objects/Billboard__c/fields/Photo_1_New__c.field-meta.xml
<CustomField>
    <fullName>Photo_1_New__c</fullName>
    <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot;&amp;  Attachment_ID__c  , &quot;NO IMAGE&quot; , $Setup.ImageSizeforBillboardMaterialItemNew__c.Billboard_Photo_1_Height__c , $Setup.ImageSizeforBillboardMaterialItemNew__c.Billboard_Photo_1_Width__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Photo 1</label>
    <type>Text</type>
</CustomField>