objects/Billboard__c/fields/Photo_2_New__c.field-meta.xml
<CustomField>
    <fullName>Photo_2_New__c</fullName>
    <formula>IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot;&amp;  Attachment_ID2__c  , &quot;NO IMAGE&quot; , $Setup.ImageSizeforBillboardMaterialItemNew__c.Billboard_Photo_2_Height__c , $Setup.ImageSizeforBillboardMaterialItemNew__c.Billboard_Photo_2_Width__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Photo 2</label>
    <type>Text</type>
</CustomField>