objects/Billboard__c/fields/PMT__c.field-meta.xml
<CustomField>
    <fullName>PMT__c</fullName>
    <label>PMT</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>