objects/Billboard__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <length>30</length>
    <type>Text</type>
</CustomField>