objects/Billboard__c/fields/Vinyl_Replacement__c.field-meta.xml
<CustomField>
    <fullName>Vinyl_Replacement__c</fullName>
    <label>Vinyl Replacement</label>
    <type>Date</type>
</CustomField>