objects/Billboard__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Location__c</columns>
    <columns>NAME</columns>
    <columns>Billboard_Status__c</columns>
    <columns>Billboard_Type__c</columns>
    <columns>BB_Vendor__c</columns>
    <columns>Client_Name__c</columns>
    <columns>Vinyl_Replacement__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>